cluster/homa/homeassistant/000.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mypod
  namespace: homa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mypod
  template:
    metadata:
      name: mypod
      labels:
        app: mypod
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchExpressions:
          - key: app
            operator: NotIn
            values:
            - homeassistant
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mypod
            topologyKey: "kubernetes.io/hostname"
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
               - key: app
                 operator: NotIn
                 values:
                 - homeassistant
             topologyKey: "kubernetes.io/hostname"
      containers:
        - name: test
          image: k8s.gcr.io/pause:3.2
          volumeMounts:
          #- name: config-vol
          #  mountPath: /etc/config
          - name: config-volume
            mountPath: /config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: mypod-config
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 100%
#      maxSurge: 25%
#  revisionHistoryLimit: 10
#  progressDeadlineSeconds: 600
