cluster/homa/homeassistant/003-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: homeassistant
  namespace: homa
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homeassistant

    spec:
      volumes:
        - name: config-volume
          hostPath:
            path: /data/volumes/homa/homeassistant/config/
         # persistentVolumeClaim:
         #   claimName: homa-config
        - name: config-yaml
          configMap: 
            name: homeassistant-config
            items:
            - key: automations.yaml 
              path: automations.yaml
            - key: configuration.yaml
              path: configuration.yaml
            - key: groups.yaml
              path: groups.yaml
            - key: scenes.yaml
              path: scenes.yaml
            - key: scripts.yaml
              path: scripts.yaml
            - key: secrets.yaml
              path: secrets.yaml
#configuration.yaml  groups.yaml  home-assistant.log  home-assistant.log.1  home-assistant.log.fault  scenes.yaml  scripts.yaml  secrets.yaml
      containers:
        - name: syncmaster
          image: 'mebaxyz/sync-master:latest'
          volumeMounts:
          - name: config-volume
            mountPath: /config
          imagePullPolicy: Always
          ports:
          - containerPort: 873
        - name: homeassistant
          image: 'homeassistant/home-assistant:beta'
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8123
          volumeMounts:
          - name: config-volume
            mountPath: /config
          - name: config-yaml
            mountPath: /config/automations.yaml
            subPath: automations.yaml
          - name: config-yaml
            mountPath: /config/configuration.yaml
            subPath: configuration.yaml
          - name: config-yaml
            mountPath: /config/groups.yaml
            subPath: groups.yaml
          - name: config-yaml
            mountPath: /config/scenes.yaml
            subPath: scenes.yaml
          - name: config-yaml
            mountPath: /config/scripts.yaml
            subPath: scripts.yaml
          - name: config-yaml
            mountPath: /config/secrets.yaml
            subPath: secrets.yaml
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: true
      restartPolicy: Always
      hostNetwork: false
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
