cluster/homa/homeassistant/004-service.yaml
---

kind: Service
apiVersion: v1
metadata:
  name: homeassistant
  namespace: homa
  labels:
    app: homeassistant
    kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
  selector:
    app: homeassistant
